# yazkb

./: LICENSE  README.md
tasks/: README.md
tasks/fibo/halo2/: .gitignore  Cargo.toml
tasks/fibo/halo2/src/: fibo_halo2_lib.rs  lib.rs  main.rs
tasks/fibo/risc0/: Cargo.toml  rust-toolchain.toml
tasks/fibo/risc0/host/src/: main.rs
tasks/fibo/risc0/methods/guest/: Cargo.toml
tasks/fibo/risc0/methods/guest/src/: main.rs
tasks/fibo/sp1/: README.md
tasks/fibo/sp1/program/: Cargo.toml
tasks/fibo/sp1/program/src/: main.rs
tasks/fibo/sp1/script/: .gitignore  Cargo.toml
tasks/fibo/sp1/script/src/: main.rs
tasks/sha2/halo2/: Cargo.toml
tasks/sha2/halo2/src/: main.rs
tasks/sha2/risc0/: Cargo.toml
tasks/sha2/risc0/methods/: Cargo.toml
tasks/sha2/risc0/methods/guest/: Cargo.toml
tasks/sha2/risc0/src/: main.rs
tasks/sha2/sp1/: .gitignore
tasks/sha2/sp1/program/: Cargo.toml
tasks/sha2/sp1/program/src/: main.rs
tasks/sha2/sp1/script/: Cargo.toml  proof-with-pis.json
tasks/sha2/sp1/script/src/: main.rs
