[package]
name = "halo2"
version = "0.1.0"
edition = "2021"

[dependencies]
halo2_proofs = { git = "https://github.com/halo2-ce/halo2.git" }
halo2_gadgets = { git = "https://github.com/halo2-ce/halo2.git", features = ["unstable"] }
halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = '0.3.0' }
rand = "0.8"