[package]
name = "risc0-sha2"
version = "0.12.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "0.21.0" }
serde = "1.0"
sha-methods = { path = "methods" }
rand = "0.8"

[dev-dependencies]
hex = "0.4"

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]
prove = ["risc0-zkvm/prove"]
