[workspace]
[package]
version = "0.1.0"
name = "sha2-program"
edition = "2021"

[dependencies]
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", rev = "b79e2c2005da105b5abe53fce1b13747b948d4f5" }
sha2 = "0.10.8"
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-v0.10.8" }