[workspace]
[package]
version = "0.1.0"
name = "sha2-script"
edition = "2021"

[dependencies]
itertools = "0.12.1"
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", rev = "b79e2c2005da105b5abe53fce1b13747b948d4f5" }
sha2 = "0.10.8"

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git", rev = "b79e2c2005da105b5abe53fce1b13747b948d4f5" }

[[bin]]
name = "groth16"
path = "bin/groth16.rs"

[[bin]]
name = "compressed"
path = "bin/compressed.rs"
